Project service_db {
  database_type: 'PostgreSQL'
  Note: 'Owned only by Django Service Backend'
}

Table auth_user {
  id uuid [pk]
  email varchar [unique, not null]
  password_hash varchar
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  deleted_at timestamptz
}

Table user_profile {
  user_id uuid [pk, ref: - auth_user.id]
  nickname varchar [not null, default: '82TA 사용자', note: '2..20 trimmed characters for user-facing profile']
  locale varchar [not null, default: 'ko-KR']
  timezone varchar [not null, default: 'Asia/Seoul']
  updated_at timestamptz [not null]
}

Table user_preference {
  user_id uuid [pk, ref: - auth_user.id]
  default_taxi_budget integer [not null, default: 10000]
  max_walk_seconds integer [not null, default: 900]
  max_transfers integer [not null, default: 3]
  max_taxi_legs integer [not null, default: 2]
  optimization_profile varchar [not null, default: 'BALANCED']
  accessibility jsonb [not null, default: '{}']
  privacy jsonb [not null, default: '{}']
  version integer [not null, default: 1]
  updated_at timestamptz [not null]
}

Table saved_place {
  id uuid [pk]
  user_id uuid [not null, ref: > auth_user.id]
  label varchar [not null]
  display_name varchar [not null]
  coordinate geography [not null]
  provider varchar
  provider_place_id varchar
  is_sensitive boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz
}

Table favorite_journey {
  Note: 'default_constraints remains JSONB for Public 1.x overlap. Public 1.6 writes a validated FavoriteJourneySearchConditionsV1 value; legacy opaque rows are not inferred and remain unavailable for quick search until re-saved.'
  id uuid [pk]
  user_id uuid [not null, ref: > auth_user.id]
  origin_saved_place_id uuid [ref: > saved_place.id]
  destination_saved_place_id uuid [ref: > saved_place.id]
  default_constraints jsonb [not null, note: 'Versioned typed search conditions or legacy opaque compatibility object; no result, rank, absolute departure time, or save-to-history state.']
  nickname varchar [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  deleted_at timestamptz
}

Table favorite_creation_idempotency {
  Note: 'DB-authoritative 24-hour receipt ledger for atomic favorite-from-places creation. Stores only versioned HMAC digests and immutable resource IDs; raw keys, request/response JSON, labels, display names and coordinates are forbidden. Resource hard delete is protected while the receipt is active; account deletion removes ledger rows first.'
  id uuid [pk]
  user_id uuid [not null, ref: > auth_user.id]
  key_digest char(64) [not null, note: 'Hex HMAC digest with favorite-create-key domain separation; never the raw Idempotency-Key.']
  request_fingerprint char(64) [not null, note: 'Hex HMAC of the canonical request with a distinct favorite-create-body domain; not a plain hash.']
  digest_key_version integer [not null, note: 'Positive derivation-key version. Every version used by an unexpired row remains available for replay lookup.']
  favorite_journey_id uuid [not null, ref: > favorite_journey.id]
  origin_saved_place_id uuid [not null, ref: > saved_place.id]
  destination_saved_place_id uuid [not null, ref: > saved_place.id]
  created_at timestamptz [not null]
  expires_at timestamptz [not null]

  indexes {
    (user_id, key_digest) [unique, name: 'uq_favorite_create_owner_key_digest']
    expires_at [name: 'ix_fav_create_idemp_expiry']
  }

  checks {
    `origin_saved_place_id <> destination_saved_place_id` [name: 'ck_favorite_create_distinct_places']
    `digest_key_version > 0` [name: 'ck_favorite_create_digest_key_version']
    `expires_at = created_at + interval '24 hours'` [name: 'ck_favorite_create_24h_expiry']
  }
}

Table anonymous_session {
  id uuid [pk]
  token_hash varchar [unique, not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null]
  revoked_at timestamptz
}

Table authenticated_session {
  id uuid [pk]
  user_id uuid [not null, ref: > auth_user.id]
  token_hash varchar [unique, not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null]
  last_seen_at timestamptz
  revoked_at timestamptz
}

Table route_search {
  Note: 'Exactly one of user_id or anonymous_session_id owns a row; save_to_history requires user_id and current SEARCH_HISTORY consent.'
  id uuid [pk]
  user_id uuid [ref: > auth_user.id]
  anonymous_session_id uuid [ref: > anonymous_session.id]
  origin_coordinate geography [not null]
  destination_coordinate geography [not null]
  origin_display_name varchar
  destination_display_name varchar
  departure_time timestamptz [not null]
  arrival_deadline timestamptz
  taxi_budget_max integer [not null]
  strict_budget boolean [not null]
  constraints jsonb [not null]
  status varchar [not null]
  routing_request_id varchar [unique, not null]
  contract_version varchar [not null]
  save_to_history boolean [not null, default: false]
  retention_until timestamptz [not null]
  created_at timestamptz [not null]
  expires_at timestamptz [not null]
}

Table route_search_result {
  id uuid [pk]
  route_search_id uuid [not null, ref: > route_search.id]
  recommendation_type varchar [not null]
  routing_route_id varchar [not null]
  p50_seconds integer [not null]
  p90_seconds integer [not null]
  taxi_cost_expected integer [not null]
  taxi_cost_upper integer [not null]
  reliability_score numeric [not null]
  public_result jsonb [not null]
  created_at timestamptz [not null]
}

Table route_feedback {
  id uuid [pk]
  route_search_id uuid [not null, ref: - route_search.id]
  user_id uuid [ref: > auth_user.id]
  selected_route_id varchar [not null]
  actual_duration_seconds integer
  actual_taxi_cost integer
  arrived_on_time boolean
  bus_outcome jsonb
  rating integer
  comment text
  created_at timestamptz [not null]
}

Table consent_record {
  id uuid [pk]
  user_id uuid [not null, ref: > auth_user.id]
  consent_type varchar [not null]
  document_version varchar [not null]
  accepted boolean [not null]
  recorded_at timestamptz [not null]
}

Table data_rights_job {
  id uuid [pk]
  user_id uuid [not null, ref: > auth_user.id]
  job_type varchar [not null, note: 'EXPORT or DELETE']
  status varchar [not null, note: 'PENDING, RUNNING, COMPLETE, FAILED']
  artifact_ref varchar [note: 'Internal encrypted object reference; never exposed directly']
  download_expires_at timestamptz
  failure_code varchar
  requested_at timestamptz [not null]
  started_at timestamptz
  completed_at timestamptz
}

Table account_audit_event {
  id uuid [pk]
  user_id uuid [ref: > auth_user.id]
  event_type varchar [not null]
  safe_metadata jsonb [not null, default: '{}']
  created_at timestamptz [not null]
}
